--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <!--[if lt IE 9]>
     <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'name='viewport'>
-    <meta content="ie=edge" http-equiv="x-ua-compatible">
-    <meta content=
-    "We tend to talk about gentrification as one story: newcomers displace long-time residents, erasing history and disrupting culture in the process. But living through dramatic neighborhood change always brings up many stories. Those stories--from West Oakland's people and places--are what this interactive is all about."
-    name="description"><!--facebook-->
-    <meta content="West Side Stories: Gentrification in West Oakland">
-    <meta content="http://youthradio.github.io/">
-    <meta content="West Side Stories">
-    <meta content="We tend to talk about gentrification as one story: newcomers displace long-time residents, erasing history and disrupting culture in the process. But living through dramatic neighborhood change always brings up many stories. Those stories--from West Oakland's people and places--are what this interactive is all about.">
-    <meta content="http://youthradio.github.io/images/facebook_shot.png">
-    <meta content="website"><!-- stylesheets -->
-    <link href="images/about.png" rel="icon" type="image/x-icon">
-    <link href="images/about.png" rel="shortcut icon" type="image/x-icon">
-    <link href="images/about.png" rel="apple-touch-icon">
-    <link href="images/about.png" rel="apple-touch-icon-precomposed">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="We tend to talk about gentrification as one story: newcomers displace long-time residents, erasing history and disrupting culture in the process. But living through dramatic neighborhood change always brings up many stories. Those stories--from West Oakland's people and places--are what this interactive is all about.">
+
+    <!--facebook-->
+
+    <meta property="og:title" content="West Side Stories: Gentrification in West Oakland">
+    <meta property="og:url" content="http://youthradio.github.io/">
+    <meta property="og:site_name" content="West Side Stories">
+    <meta property="og:description" content="We tend to talk about gentrification as one story: newcomers displace long-time residents, erasing history and disrupting culture in the process. But living through dramatic neighborhood change always brings up many stories. Those stories--from West Oakland's people and places--are what this interactive is all about.">
+    <meta property="og:image" content="http://youthradio.github.io/images/facebook_shot.png">
+    <meta property="og:type" content="website">
+
+    <!-- stylesheets -->
+    <link rel="icon" href="images/about.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/about.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="images/about.png">
+    <link rel="apple-touch-icon-precomposed" href="images/about.png">
 
     <title>West Side Stories</title>
     <link href='http://fonts.googleapis.com/css?family=Pacifico' rel=
@@ -31,7 +34,9 @@
     "stylesheet" type="text/css">
     <link href="bower_components/mapbox.js/mapbox.css" rel="stylesheet" type=
     "text/css">
-    <link href="css/app.css" rel="stylesheet"><!-- js -->
+    <link href="css/app.css" rel="stylesheet">
+
+    <!-- js -->
 
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/mapbox.js/mapbox.js"></script>
