--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <h3>16th Street Station</h3><img class="feature-img" src=
                 "images/station.png">
 
-                <p>Built in 1912 and no longer in active use, the 16th Street station was once among the largest transportation centers in Oakland. It housed the West Coast branch of the very first African American Labor Union in America and was the last stop for many African Americans leaving the South. The station is now owned by an affordable housing non-profit with ambitious plans for restoration. In the meantime, it’s occasionally used for events like haunted houses and film shoots.</p>
+                <p>Built in 1912 and no longer in active use, the 16th Street station was once among the largest transportation centers in Oakland. It housed the West Coast branch of the very first African American Labor Union in America and was the last stop for many African Americans leaving the South. The station is now managed by an affordable housing non-profit with ambitious plans for restoration. In the meantime, it’s occasionally used for events like haunted houses and film shoots. The plaza outside the station is home to three urban agriculture projects including a workforce development program for Oakland teens.</p>
 
                 <p><small><a href="http://www.16thstreetstation.com" target=
                 "_blank">Source</a></small></p>
