--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
         <div class="fullscreen background" id="splash">
             <div class="content-a">
                 <div class="content-b">
-                    <h1>West Side Stories</h1>
+                    <span class="sub target fadeEl">Youth Radio</span>
+                    <img id="logo" src="images/logo.png">
+                    <h1 class="target fadeEl">West Side Stories</h1>
+                    <h2 class="target fadeEl">Gentrification in West Oakland</h2>
 
-                    <h2>Gentrification in West Oakland</h2>
-
-                    <div class="content-c">
+                    <div class="content-c target fadeEl">
                         <a class="button secondary cust-button" href=
                         "#">Enter</a>
                     </div>
