--- a/index.html
+++ b/index.html
@@ -95,16 +95,40 @@
                 <h3>scroll</h3>
             </section>
 
+            <section id='malik'>
+                <h3>Malik</h3><img class="feature-img" src="images/malik.png">
+
+                <p>22-year old Malik Byers grew up in West Oakland. He reflects on how his old neighborhood has changed over the years.</p><audio controls="controls" id="audio-player" src="media/malik.mp3"></audio>
+            </section>
+
+
+            <section id='hotel'>
+                <h3>Hotel California</h3><img class="feature-img" src=
+                "images/hotel.png">
+
+                <p>Built in the 1920s, the California Hotel was once a place
+                that welcomed African American artists and musicians when they
+                were discriminated against elsewhere. Then, somewhere around
+                the 1970s, the
+                neighborhood started to deteriorate and the hotel closed. Fast forward to 2011:
+                the East Bay Asian Local Development Corporation and other
+                supporters pulled together funds for a major renovation. Now,
+                the California Hotel provides 137 units of low-income housing
+                and even has a rooftop garden.</p>
+
+                <p><small><a href=
+                "http://www.ebaldc.org/home/california-hotel-0"
+                target="_blank">Source</a></small></p>
+            </section>
+
             <section id='bart'>
                 <h3>West Oakland Bart Station</h3><img class="feature-img" src=
                 "images/bart.png">
 
-                <p>Turf dancing is a form of American street dance that is said
+                <p>Turf dancing is a form of street dance that is said
                 to have originated in Oakland, California. According to locals,
                 credit for the term goes to dancer Jeriel Bey, who created it
-                as an acronym for Taking Up Room on the Floor. Prior names for
-                the dance form, like "having fun with it" or "hitting it"
-                didn't seem as marketable. Dance elements include popping,
+                as an acronym for Taking Up Room on the Floor. Dance elements include popping,
                 locking, and miming. If you ride through the West Oakland BART
                 station, you just might encounter a Turf dancer, making the
                 most of the crowded train as a moving stage.</p>
@@ -119,33 +143,6 @@
                     "560"></iframe>
                 </div>
             </section>
-
-            <section id='hotel'>
-                <h3>Hotel California</h3><img class="feature-img" src=
-                "images/hotel.png">
-
-                <p>Built in the 1920s, the California Hotel was once a place
-                that welcomed African American artists and musicians when they
-                were discriminated against elsewhere. Then, somewhere around
-                the 1970s--you know what was going on around that time--the
-                neighborhood started to deteriorate. The hotel ran into
-                financial trouble and eventually closed. Fast forward to 2011:
-                the East Bay Asian Local Development Corporation and other
-                supporters pulled together funds for a major renovation. Now,
-                the California Hotel provides 137 units of low-income housing
-                and even has a rooftop garden.</p>
-
-                <p><small><a href=
-                "http://www.contracostatimes.com/news/ci_25771994/oakland-california-hotel-reopens-home-low-income-residents"
-                target="_blank">Source</a></small></p>
-            </section>
-
-            <section id='malik'>
-                <h3>Malik</h3><img class="feature-img" src="images/malik.png">
-
-                <p>22-year old Malik Byers grew up in West Oakland. He reflects on how his old neighborhood has changed over the years.</p><audio controls="controls" id="audio-player" src="media/malik.mp3"></audio>
-            </section>
-
             <section id='station'>
                 <h3>16th Street Station</h3><img class="feature-img" src=
                 "images/station.png">
@@ -171,12 +168,10 @@
                 "images/cranes.png">
 
                 <p>The Port of Oakland spans 20 miles of waterfront, from the
-                Bay Bridge through Oakland International Airport. Global trade
-                through the port is valued at $40 billion a year. The port
-                supports about 73,000 jobs in the San Francisco Bay Area.</p>
+                Bay Bridge to Oakland International Airport. The port's global trade is worth $40 billion per year. The port provides 73,000 Bay Area jobs.</p>
 
                 <p><small><a href=
-                "http://www.portofoakland.com/about/history.aspx" target=
+                "http://www.portofoakland.com/newsroom/pressReleases/2014/pr_358.aspx" target=
                 "_blank">Source</a></small></p>
             </section>
 
@@ -194,18 +189,17 @@
                 "images/defermery.png">
 
                 <p>DeFremery Park is named after James DeFremery, who was the
-                founder of the Savings Union Bank of San Francisco (the
-                institution that became Wells Fargo). DeFremery was where the
-                Black Panther Party housed key social services and political
+                founder of the Savings Union Bank of San Francisco. DeFremery Park was where the
+                Black Panther Party ran social and political
                 activities, and the park was a distribution site for free food
                 and sickle-cell anemia testing. With its landmark Victorian
-                house, DeFremery is now a gathering place for West Oakland
+                house, DeFremery Park is now a gathering place for West Oakland
                 residents and families, who get together there for community
                 events and rallies, exercise, fundraisers, classes, and
                 celebrations.</p>
 
                 <p><small><a href=
-                "https://localwiki.org/oakland/de_Fremery_Park" target=
+                "http://collections.museumca.org/?q=collection-item/h261274a" target=
                 "_blank">Source</a></small></p>
                 <hr>
 
@@ -259,8 +253,7 @@
                 mural commemorating this historic Olympic event, with images of
                 the athletes and the phrase, "It only takes a pair of gloves."
                 If you happen to pass by, you will notice the building and
-                mural have been bulldozed, as part of West Oakland
-                redevelopment plans.</p>
+                mural have been bulldozed.</p>
 
                 <p><small><a href=
                 "http://www2.oaklandnet.com/Government/o/PBN/OurOrganization/PlanningZoning/OAK028334"
