fixing error messages

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                     <button id="submit_form" type="submit" class="button secondary cust-button">Submit</button>
                 </fieldset>
             </form>
-            <div id="form-messages"></div>
+            <div id="form-messages" class="success"></div>
             <a class="close-reveal-modal">&#215;</a>
         </div>
 
