change mural copy

--- a/index.html
+++ b/index.html
@@ -254,8 +254,7 @@
                 National Anthem played during the victory ceremony. This was a
                 mural commemorating this historic Olympic event, with images of
                 the athletes and the phrase, "It only takes a pair of gloves."
-                If you happen to pass by, you will notice the building and
-                mural have been bulldozed.</p>
+                If you happen to pass by, you'll notice the mural no longer exists. The building had been used as a decontamination station, and once that work was done, the structure was bulldozed, taking the mural with it, according to Oakland Council member Lynette Gibson McElhaney.</p>
 
                 <p><small><a href=
                 "http://www2.oaklandnet.com/Government/o/PBN/OurOrganization/PlanningZoning/OAK028334"
