--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <!--facebook-->
 
     <meta property="og:title" content="West Side Stories: Gentrification in West Oakland">
+    <meta property="twitter:title" content="West Side Stories: Gentrification in West Oakland">
     <meta property="og:url" content="http://youthradio.github.io/">
     <meta property="og:site_name" content="West Side Stories">
     <meta property="og:description" content="We tend to talk about gentrification as one story: newcomers displace long-time residents, erasing history and disrupting culture in the process. But living through dramatic neighborhood change always brings up many stories. Those stories--from West Oakland's people and places--are what this interactive is all about.">
+    <meta property="twitter:description" content="We tend to talk about gentrification as one story: newcomers displace long-time residents, erasing history and disrupting culture in the process. But living through dramatic neighborhood change always brings up many stories. Those stories--from West Oakland's people and places--are what this interactive is all about.">
     <meta property="og:image" content="http://youthradio.github.io/images/facebook_shot.png">
+    <meta property="twitter:image" content="http://youthradio.github.io/images/facebook_shot.png">
     <meta property="og:type" content="website">
 
     <!-- stylesheets -->
@@ -74,7 +77,6 @@
 
         <article id='narrative'>
             <section class='cover active' id='cover'>
-                <i class="fi-share share-bttn"></i>
                 <h1>West Side Stories</h1>
 
                 <h2>Gentrification in West Oakland</h2>
@@ -425,6 +427,8 @@
             <p class="hidden">Add Your Story!</p>
         </div>
 
+        <!-- social -->
+        <div class="share-bttn"></div>
         <!-- Modal trigger mobile -->
         <div class="text-center show-for-touch" id="modal-trigger-touch">
             <a id="plus-touch" class="fi-plus large" href=
@@ -497,6 +501,7 @@
     <!-- Script -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="js/share.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/mailer.js"></script>
 
